added library(scales) to lecture & key 2.3

--- a/course-materials/keys/KEY-lecture2.3-evolution.qmd
+++ b/course-materials/keys/KEY-lecture2.3-evolution.qmd
@@ -28,6 +28,7 @@ This template follows [lecture 2.3 slides](../lecture-slides/lecture2.3-evolutio
 library(tidycensus)
 library(tidyverse)
 library(gghighlight)
+library(scales)
 
 #..........................import data...........................
 lyme <- read_csv(here::here("course-materials", "lecture-slides", "data", "Lyme_Disease_Cases_by_State_or_Locality.csv"))
