--- a/course-materials/lecture-slides/lecture2.2-distributions-slides.qmd
+++ b/course-materials/lecture-slides/lecture2.2-distributions-slides.qmd
@@ -569,6 +569,13 @@ mko_clean |>
 
 :::
 
+::: {.notes}
+Bandwidth is a parameter that controls the level of smoothing. Smaller bandwidths result in a more detailed (but potentially noisy) curve, while larger bandwidths create a smoother curve by averaging more of the data.
+
+Default value: adjust = 1. This uses the default bandwidth provided by the underlying density estimation method.
+:::
+
+
 ---
 
 ## {#hist-vs-dens1 data-menu-title="Histogram vs. density"} 
