--- a/course-materials/lecture-slides/lecture2.3-evolution-slides.qmd
+++ b/course-materials/lecture-slides/lecture2.3-evolution-slides.qmd
@@ -225,6 +225,7 @@ See the [online documentation](https://walker-data.com/tidycensus/articles/other
 library(tidycensus)
 library(tidyverse)
 library(gghighlight)
+library(scales)
 
 #..........................import data...........................
 lyme <- read_csv(here::here("week2", "data", "Lyme_Disease_Cases_by_State_or_Locality.csv"))
