--- a/course-materials/lecture-slides/sections/2.3-lyme.qmd
+++ b/course-materials/lecture-slides/sections/2.3-lyme.qmd
@@ -32,6 +32,7 @@ editor_options:
 library(tidycensus)
 library(tidyverse)
 library(gghighlight)
+library(scales)
 
 #..........................import data...........................
 lyme <- read_csv(here::here("course-materials", "lecture-slides", "data", "Lyme_Disease_Cases_by_State_or_Locality.csv"))
