--- a/course-materials/week2.qmd
+++ b/course-materials/week2.qmd
@@ -131,14 +131,14 @@ Install the [ColorPick Eyedropper](https://chrome.google.com/webstore/detail/col
 
 ## {{< fa pencil title="pencil" >}} Assignment Reminders {#assignment-reminders}
 
-| Assignment Type | Assignment Title         | Date Assigned  | Date Due                   |
-|-----------------|--------------------------|----------------|----------------------------|
-| EOC             | EOC (week 2)             | Mon 01/06/2025 | Mon 01/06/2025, 11:55pm PT |
-| HW              | Homework Assignment #1   | Tue 01/07/2025 | Tue 01/21/2025, 11:59pm PT |
-: {.hover .bordered tbl-colwidths="[20,30,20,30]"} 
-
-<!-- | Assignment Type | Assignment Title                                  | Date Assigned  | Date Due                   | -->
-<!-- |-----------------|---------------------------------------------------|----------------|----------------------------| -->
-<!-- | EOC             | [EOC (week 2)](https://forms.gle/G5DbEAxKCxyaCZyB8)  | Mon 01/13/2024 | Mon 01/13/2024, 11:55pm PT | -->
-<!-- | HW              | [Homework Assignment #1](assignments/HW1.qmd)  | Tue 01/07/2025 | Tue 01/21/2025, 11:59pm PT | -->
+<!-- | Assignment Type | Assignment Title         | Date Assigned  | Date Due                   | -->
+<!-- |-----------------|--------------------------|----------------|----------------------------| -->
+<!-- | EOC             | EOC (week 2)             | Mon 01/13/2025 | Mon 01/13/2025, 11:55pm PT | -->
+<!-- | HW              | Homework Assignment #1   | Tue 01/07/2025 | Tue 01/21/2025, 11:59pm PT | -->
 <!-- : {.hover .bordered tbl-colwidths="[20,30,20,30]"}  -->
+
+| Assignment Type | Assignment Title                                  | Date Assigned  | Date Due                   |
+|-----------------|---------------------------------------------------|----------------|----------------------------|
+| EOC             | [EOC (week 2)](https://forms.gle/G5DbEAxKCxyaCZyB8){target="_blank"}  | Mon 01/13/2024 | Mon 01/13/2024, 11:55pm PT |
+| HW              | [Homework Assignment #1](assignments/HW1.qmd)  | Tue 01/07/2025 | Tue 01/21/2025, 11:59pm PT |
+: {.hover .bordered tbl-colwidths="[20,30,20,30]"}
