--- a/assignments.qmd
+++ b/assignments.qmd
@@ -40,7 +40,7 @@ End-of-class surveys (EOCs) will become available at the end of each class (Mond
 | EOC link                     | Date Assigned  | Date Due       |
 |------------------------------|----------------|----------------|
 | [EOC (week 1)](https://forms.gle/RGd3qzQR4ue9HvfR8)                 | Mon 01/06/2025 | Mon 01/06/2025 |
-| EOC (week 2)                 | Mon 01/13/2025 | Mon 01/13/2025 |
+| [EOC (week 2)](https://forms.gle/XMnf7cxrxmbcAA5k6)                 | Mon 01/13/2025 | Mon 01/13/2025 |
 | *No lecture or EOC (week 3)* | *NA*           | *NA*           |
 | EOC (week 4)                 | Mon 01/27/2025 | Mon 01/27/2025 |
 | EOC (week 5)                 | Mon 02/03/2025 | Mon 02/03/2025 |
