--- a/course-materials/discussion/week3/week3-slides.qmd
+++ b/course-materials/discussion/week3/week3-slides.qmd
@@ -32,7 +32,7 @@ editor_options:
 <br>
 <br>
 
-[[WebAIM](https://webaim.org/) defines alternative text, aka alt text, as:]{.body-text-m} 
+[[WebAIM](https://webaim.org/){target="_blank"} defines alternative text, aka alt text, as:]{.body-text-m} 
 
 <br>
 
@@ -78,7 +78,7 @@ editor_options:
 
 <hr>
 
-Data viz designer and instructor, [Amy Cesal](https://www.amycesal.com/), suggests this rule of thumb for writing alt text for data visualizations: **alt=“[Chart type]{style="background-color:#FFE600"} of [type of data]{style="background-color:#6DFFF8"} where [reason for including chart]{style="background-color:#74FF75"}**.
+Data viz designer and instructor, [Amy Cesal](https://www.amycesal.com/){target="_blank"}, suggests this rule of thumb for writing alt text for data visualizations: **alt=“[Chart type]{style="background-color:#FFE600"} of [type of data]{style="background-color:#6DFFF8"} where [reason for including chart]{style="background-color:#74FF75"}**.
 
 <br>
 
@@ -96,7 +96,7 @@ knitr::include_graphics("images/hawkins-warming-stripes.png")
 [**alt="[Colored stripes]{style="background-color:#FFE600"} of [chronologically ordered temperatures]{style="background-color:#6DFFF8"} where [they increase in red to show the warming global temperature]{style="background-color:#74FF75"}"**]{.body-text-s}
 
 ::: footer
-[Example from [Amy Cesal](https://www.amycesal.com/)'s article, [Writing Alt Text for Data Visualization](https://nightingaledvs.com/writing-alt-text-for-data-visualization/)]{.gray-text}
+[Example from [Amy Cesal](https://www.amycesal.com/){target="_blank"}'s article, [Writing Alt Text for Data Visualization](https://nightingaledvs.com/writing-alt-text-for-data-visualization/){target="_blank"}]{.gray-text}
 :::
 
 ---
@@ -121,7 +121,7 @@ knitr::include_graphics("images/haake-milk.png")
 [**alt="[A split bars chart]{style="background-color:#FFE600"} of [different types of milk's (dairy and plant-based) environmental impact]{style="background-color:#6DFFF8"}, where [cow's milk scores significantly worst in carbon emissions, land use, and water use than the other milk alternatives. Cow's milk produces two times more carbon emissions, uses nine times more land, and twice the water that rice milk uses. Rice milk is the second most contaminating type of milk in terms of carbon emissions.]{style="background-color:#74FF75"}"**]{.body-text-s}
 
 ::: footer
-[Example from [Datawrapper](https://academy.datawrapper.de/article/330-how-to-write-good-alternative-descriptions-for-your-data-visualization)]{.gray-text}
+[Example from [Datawrapper](https://academy.datawrapper.de/article/330-how-to-write-good-alternative-descriptions-for-your-data-visualization){target="_blank"}]{.gray-text}
 :::
 
 ---
@@ -182,7 +182,7 @@ knitr::include_graphics("images/hawkins-warming-stripes.png")
 :::
 
 ::: {.column width="50%"}
-[**Figure caption:**]{.teal-text} "Warming Stripes", by Ed Hawkins, depicts the average annual global temperature from 1850-2022. Data Source: [HadCRUT5](https://www.metoffice.gov.uk/hadobs/hadcrut5/). To learn more about this visualization, visit [showyourstripes.info](https://showyourstripes.info/).
+[**Figure caption:**]{.teal-text} "Warming Stripes", by Ed Hawkins, depicts the average annual global temperature from 1850-2022. Data Source: [HadCRUT5](https://www.metoffice.gov.uk/hadobs/hadcrut5/){target="_blank"}. To learn more about this visualization, visit [showyourstripes.info](https://showyourstripes.info/){target="_blank"}.
 
 [**Alt text:**]{.teal-text} Colored stripes of chronologically ordered temperatures where they increase in red to show the warming global temperature
 :::
@@ -208,7 +208,7 @@ In addition to the formula presented on the last couple slides, consider the fol
 
 ::: incremental
 - **write in sentence case, but keep it short** (alt text is read linearly by screen readers, which means that people can’t go back a word if they missed something)
-- **carefully consider the use of special characters** ([this article](https://www.elevenways.be/en/articles/screenreaders-special-characters) details "safe" vs. "unread" characters)
+- **carefully consider the use of special characters** ([this article](https://www.elevenways.be/en/articles/screenreaders-special-characters){target="_blank"} details "safe" vs. "unread" characters)
 - **link to the data or source** (not in your alt text, but somewhere in the surrounding text or figure caption)
 :::
 
