--- a/course-materials/discussion/week3/week3-solution.qmd
+++ b/course-materials/discussion/week3/week3-solution.qmd
@@ -19,7 +19,7 @@ While you should generally follow the [alt text formula](week3-alt-text-slides.q
 #| echo: false
 #| warning: false
 #| message: false
-#| 
+#| fig-alt: "A histogram of penguin body masses where Gentoo penguins have body masses that are about 37% larger than Adelie and Chinstrap penguins."
 library(ggplot2)
 library(dplyr)
 library(tidyr)
@@ -54,10 +54,10 @@ ggplot(data = penguins, aes(x = body_mass_g, fill = species)) +
 
 **Alt text:** A dot plot of monthly global temperatures compared to the 20th-century average, where monthly global temperatures are increasing over time. Nearly every month since the mid-1970s is warmer than the 20th-century average, with 12 record-breaking hot months occurring between 2015-2023.
 
-![](images/nyt-monthly-temp.png){fig-alt="Alt text goes here"}
+![](images/nyt-monthly-temp.png){fig-alt="A dot plot of monthly global temperatures compared to the 20th-century average, where monthly global temperatures are increasing over time. Nearly every month since the mid-1970s is warmer than the 20th-century average, with 12 record-breaking hot months occurring between 2015-2023."}
 
 ## Example 3 (Fig 1A from [Chapman et al. 2024](https://www.science.org/doi/full/10.1126/science.adh8874){target="_blank"}):
 
 **Alt text:** A heatmap of global species observations where the highest concentration of observations occur in high-income countries, particularly in the USA and European nations.
 
-<img src="images/chapman-etal-2024.png" alt="Alt text goes here" width="700px">
+<img src="images/chapman-etal-2024.png" alt="A heatmap of global species observations where the highest concentration of observations occur in high-income countries, particularly in the USA and European nations." width="700px">
