added ex 4 (use your own viz) to week3 discussion exercise

--- a/course-materials/discussion/week3/week3-exercise.qmd
+++ b/course-materials/discussion/week3/week3-exercise.qmd
@@ -79,3 +79,8 @@ The associated figure caption for this figure:
  
 <img src="images/chapman-etal-2024.png" alt="Alt text goes here" width="700px">
 
+## Example 4 (Write alt text for a viz of your choice)
+
+1. Save and embed a data viz of your choice using Markdown or HTML syntax
+2. Add alt text 
+3. Share and discuss your alt text with a partner / group
