--- a/course-materials/discussion/week3/week3-solution.qmd
+++ b/course-materials/discussion/week3/week3-solution.qmd
@@ -61,3 +61,7 @@ ggplot(data = penguins, aes(x = body_mass_g, fill = species)) +
 **Alt text:** A heatmap of global species observations where the highest concentration of observations occur in high-income countries, particularly in the USA and European nations.
 
 <img src="images/chapman-etal-2024.png" alt="A heatmap of global species observations where the highest concentration of observations occur in high-income countries, particularly in the USA and European nations." width="700px">
+
+## Example 4 (Write alt text for a viz of your choice)
+
+Viz and associated alt text will vary!
