making progress on HW2! currently writing up description

--- a/course-materials/week1.qmd
+++ b/course-materials/week1.qmd
@@ -15,7 +15,7 @@ knitr::include_graphics(here::here("images", "ggplot2.png"))
 
 ## {{< fa clipboard-list title="a clipboard with a To Do list" >}} Pre-lecture Prep {#pre-class-prep}
 
-### A. Install required packages
+### A. Install required packages {#install-pkgs}
 
 ```{r}
 #| eval: false
@@ -25,7 +25,7 @@ install.packages("palmerpenguins") # a package containing the `penguins` data se
 install.packages("tidyverse") # a collection of packages used for data wrangling / manipulation and visualization (including {ggplot2})
 ```
 
-### B. Create your `EDS-240-class-examples` repository
+### B. Create your `EDS-240-class-examples` repository {#create-class-repo}
 
 We'll be coding together quite a bit throughout this course. To stay organized, we'll complete all of our in-class examples in one repository (repo). **Create and clone a GitHub repository named `EDS-240-class-examples`** (or something that makes sense for you). Step-by-step instructions are provided, below, if needed:
 
@@ -50,7 +50,7 @@ We'll be coding together quite a bit throughout this course. To stay organized, 
 
 **Remember to fill out your repo's README,** referencing the [MEDS README Guidelines](https://ucsb-meds.github.io/README-guidelines/){target="_blank"}, as well.
 
-### C. Download the `.qmd` template
+### C. Download the `.qmd` template {#download-templates}
 
 Template `.qmd` files will be provided alongside (most) lecture slides to help keep us organized and on track throughout class. They are available for download directly [from GitHub](https://github.com/EDS-240-Data-Viz/code-along-templates/tree/main){target="_blank"} at the link(s) provided in the **Lecture Materials** table (below). Look for the download button at the top right corner of the file (it looks similar to this, {{< fa download title="a downward pointing arrow atop a hard drive" >}}). Please download all necessary templates and save them to the appropriate `EDS-240-data-viz-examples/weekX` folder before each class. 
 
